[project]
name = "pkgdb"
version = "0.1.2"
description = "Track, store and query your PyPI package download statistics"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["pypi", "statistics", "downloads", "analytics", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "pypistats>=1.12.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/shakfu/pkgdb"
Repository = "https://github.com/shakfu/pkgdb"
Issues = "https://github.com/shakfu/pkgdb/issues"

[project.scripts]
pkgdb = "pkgdb:main"

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "twine>=6.1.0",
    "types-tabulate>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["CHANGELOG.md", "tests"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network, deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
